fix:added some noted

--- a/node-js/session.html
+++ b/node-js/session.html
@@ -13,3 +13,21 @@
 </form> 
 </body> 
 </html>
+
+
+<!--
+🍪 Cookie (small memory in the browser)
+⚠️ Cookie does NOT store username/password
+It stores only a session ID
+
+
+
+🗄️ Session (big memory on the server)
+🔁 How they work together (story)
+You login
+Server creates a session
+Server sends cookie (session ID)
+Browser stores cookie
+Next request → browser sends cookie
+Server matches session ID
+Server knows who you are 😄-->
